# php/lib/api/TradingApi.php
@@ -1109,6 +1109,340 @@ class TradingApi
     }
 
     /**
+     * Operation getFills
+     *
+     * Get a list of filled orders
+     *
+     * @param  string $symbol Only return results for this symbol (optional)
+     * @param  int $from Epoch timestamp in ms (optional)
+     * @param  int $to Epoch timestamp in ms (optional)
+     * @param  int $limit Maximum amount of results to return in a single call. If omitted, 100 results are returned by default. (optional)
+     *
+     * @throws \com.blockchain.exchange.rest\ApiException on non-2xx response
+     * @throws \InvalidArgumentException
+     * @return \com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]
+     */
+    public function getFills($symbol = null, $from = null, $to = null, $limit = null)
+    {
+        list($response) = $this->getFillsWithHttpInfo($symbol, $from, $to, $limit);
+        return $response;
+    }
+
+    /**
+     * Operation getFillsWithHttpInfo
+     *
+     * Get a list of filled orders
+     *
+     * @param  string $symbol Only return results for this symbol (optional)
+     * @param  int $from Epoch timestamp in ms (optional)
+     * @param  int $to Epoch timestamp in ms (optional)
+     * @param  int $limit Maximum amount of results to return in a single call. If omitted, 100 results are returned by default. (optional)
+     *
+     * @throws \com.blockchain.exchange.rest\ApiException on non-2xx response
+     * @throws \InvalidArgumentException
+     * @return array of \com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[], HTTP status code, HTTP response headers (array of strings)
+     */
+    public function getFillsWithHttpInfo($symbol = null, $from = null, $to = null, $limit = null)
+    {
+        $request = $this->getFillsRequest($symbol, $from, $to, $limit);
+
+        try {
+            $options = $this->createHttpClientOption();
+            try {
+                $response = $this->client->send($request, $options);
+            } catch (RequestException $e) {
+                throw new ApiException(
+                    "[{$e->getCode()}] {$e->getMessage()}",
+                    $e->getCode(),
+                    $e->getResponse() ? $e->getResponse()->getHeaders() : null,
+                    $e->getResponse() ? (string) $e->getResponse()->getBody() : null
+                );
+            }
+
+            $statusCode = $response->getStatusCode();
+
+            if ($statusCode < 200 || $statusCode > 299) {
+                throw new ApiException(
+                    sprintf(
+                        '[%d] Error connecting to the API (%s)',
+                        $statusCode,
+                        $request->getUri()
+                    ),
+                    $statusCode,
+                    $response->getHeaders(),
+                    $response->getBody()
+                );
+            }
+
+            $responseBody = $response->getBody();
+            switch($statusCode) {
+                case 200:
+                    if ('\com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]' === '\SplFileObject') {
+                        $content = $responseBody; //stream goes to serializer
+                    } else {
+                        $content = (string) $responseBody;
+                    }
+
+                    return [
+                        ObjectSerializer::deserialize($content, '\com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]', []),
+                        $response->getStatusCode(),
+                        $response->getHeaders()
+                    ];
+            }
+
+            $returnType = '\com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]';
+            $responseBody = $response->getBody();
+            if ($returnType === '\SplFileObject') {
+                $content = $responseBody; //stream goes to serializer
+            } else {
+                $content = (string) $responseBody;
+            }
+
+            return [
+                ObjectSerializer::deserialize($content, $returnType, []),
+                $response->getStatusCode(),
+                $response->getHeaders()
+            ];
+
+        } catch (ApiException $e) {
+            switch ($e->getCode()) {
+                case 200:
+                    $data = ObjectSerializer::deserialize(
+                        $e->getResponseBody(),
+                        '\com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]',
+                        $e->getResponseHeaders()
+                    );
+                    $e->setResponseObject($data);
+                    break;
+            }
+            throw $e;
+        }
+    }
+
+    /**
+     * Operation getFillsAsync
+     *
+     * Get a list of filled orders
+     *
+     * @param  string $symbol Only return results for this symbol (optional)
+     * @param  int $from Epoch timestamp in ms (optional)
+     * @param  int $to Epoch timestamp in ms (optional)
+     * @param  int $limit Maximum amount of results to return in a single call. If omitted, 100 results are returned by default. (optional)
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Promise\PromiseInterface
+     */
+    public function getFillsAsync($symbol = null, $from = null, $to = null, $limit = null)
+    {
+        return $this->getFillsAsyncWithHttpInfo($symbol, $from, $to, $limit)
+            ->then(
+                function ($response) {
+                    return $response[0];
+                }
+            );
+    }
+
+    /**
+     * Operation getFillsAsyncWithHttpInfo
+     *
+     * Get a list of filled orders
+     *
+     * @param  string $symbol Only return results for this symbol (optional)
+     * @param  int $from Epoch timestamp in ms (optional)
+     * @param  int $to Epoch timestamp in ms (optional)
+     * @param  int $limit Maximum amount of results to return in a single call. If omitted, 100 results are returned by default. (optional)
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Promise\PromiseInterface
+     */
+    public function getFillsAsyncWithHttpInfo($symbol = null, $from = null, $to = null, $limit = null)
+    {
+        $returnType = '\com.blockchain.exchange.rest\com.blockchain.exchange.rest.model\OrderSummary[]';
+        $request = $this->getFillsRequest($symbol, $from, $to, $limit);
+
+        return $this->client
+            ->sendAsync($request, $this->createHttpClientOption())
+            ->then(
+                function ($response) use ($returnType) {
+                    $responseBody = $response->getBody();
+                    if ($returnType === '\SplFileObject') {
+                        $content = $responseBody; //stream goes to serializer
+                    } else {
+                        $content = (string) $responseBody;
+                    }
+
+                    return [
+                        ObjectSerializer::deserialize($content, $returnType, []),
+                        $response->getStatusCode(),
+                        $response->getHeaders()
+                    ];
+                },
+                function ($exception) {
+                    $response = $exception->getResponse();
+                    $statusCode = $response->getStatusCode();
+                    throw new ApiException(
+                        sprintf(
+                            '[%d] Error connecting to the API (%s)',
+                            $statusCode,
+                            $exception->getRequest()->getUri()
+                        ),
+                        $statusCode,
+                        $response->getHeaders(),
+                        $response->getBody()
+                    );
+                }
+            );
+    }
+
+    /**
+     * Create request for operation 'getFills'
+     *
+     * @param  string $symbol Only return results for this symbol (optional)
+     * @param  int $from Epoch timestamp in ms (optional)
+     * @param  int $to Epoch timestamp in ms (optional)
+     * @param  int $limit Maximum amount of results to return in a single call. If omitted, 100 results are returned by default. (optional)
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Psr7\Request
+     */
+    protected function getFillsRequest($symbol = null, $from = null, $to = null, $limit = null)
+    {
+        if ($symbol !== null && !preg_match("/^[A-Z]{3,5}-[A-Z]{3,5}$/", $symbol)) {
+            throw new \InvalidArgumentException("invalid value for \"symbol\" when calling TradingApi.getFills, must conform to the pattern /^[A-Z]{3,5}-[A-Z]{3,5}$/.");
+        }
+
+        if ($limit !== null && $limit > 1000) {
+            throw new \InvalidArgumentException('invalid value for "$limit" when calling TradingApi.getFills, must be smaller than or equal to 1000.');
+        }
+        if ($limit !== null && $limit < 1) {
+            throw new \InvalidArgumentException('invalid value for "$limit" when calling TradingApi.getFills, must be bigger than or equal to 1.');
+        }
+
+
+        $resourcePath = '/trades';
+        $formParams = [];
+        $queryParams = [];
+        $headerParams = [];
+        $httpBody = '';
+        $multipart = false;
+
+        // query params
+        if ($symbol !== null) {
+            if('form' === 'form' && is_array($symbol)) {
+                foreach($symbol as $key => $value) {
+                    $queryParams[$key] = $value;
+                }
+            }
+            else {
+                $queryParams['symbol'] = $symbol;
+            }
+        }
+        // query params
+        if ($from !== null) {
+            if('form' === 'form' && is_array($from)) {
+                foreach($from as $key => $value) {
+                    $queryParams[$key] = $value;
+                }
+            }
+            else {
+                $queryParams['from'] = $from;
+            }
+        }
+        // query params
+        if ($to !== null) {
+            if('form' === 'form' && is_array($to)) {
+                foreach($to as $key => $value) {
+                    $queryParams[$key] = $value;
+                }
+            }
+            else {
+                $queryParams['to'] = $to;
+            }
+        }
+        // query params
+        if ($limit !== null) {
+            if('form' === 'form' && is_array($limit)) {
+                foreach($limit as $key => $value) {
+                    $queryParams[$key] = $value;
+                }
+            }
+            else {
+                $queryParams['limit'] = $limit;
+            }
+        }
+
+
+
+        // body params
+        $_tempBody = null;
+
+        if ($multipart) {
+            $headers = $this->headerSelector->selectHeadersForMultipart(
+                ['application/json']
+            );
+        } else {
+            $headers = $this->headerSelector->selectHeaders(
+                ['application/json'],
+                []
+            );
+        }
+
+        // for model (json/xml)
+        if (isset($_tempBody)) {
+            // $_tempBody is the method argument, if present
+            if ($headers['Content-Type'] === 'application/json') {
+                $httpBody = \GuzzleHttp\json_encode(ObjectSerializer::sanitizeForSerialization($_tempBody));
+            } else {
+                $httpBody = $_tempBody;
+            }
+        } elseif (count($formParams) > 0) {
+            if ($multipart) {
+                $multipartContents = [];
+                foreach ($formParams as $formParamName => $formParamValue) {
+                    $multipartContents[] = [
+                        'name' => $formParamName,
+                        'contents' => $formParamValue
+                    ];
+                }
+                // for HTTP post (form)
+                $httpBody = new MultipartStream($multipartContents);
+
+            } elseif ($headers['Content-Type'] === 'application/json') {
+                $httpBody = \GuzzleHttp\json_encode($formParams);
+
+            } else {
+                // for HTTP post (form)
+                $httpBody = \GuzzleHttp\Psr7\build_query($formParams);
+            }
+        }
+
+        // this endpoint requires API key authentication
+        $apiKey = $this->config->getApiKeyWithPrefix('X-API-Token');
+        if ($apiKey !== null) {
+            $headers['X-API-Token'] = $apiKey;
+        }
+
+        $defaultHeaders = [];
+        if ($this->config->getUserAgent()) {
+            $defaultHeaders['User-Agent'] = $this->config->getUserAgent();
+        }
+
+        $headers = array_merge(
+            $defaultHeaders,
+            $headerParams,
+            $headers
+        );
+
+        $query = \GuzzleHttp\Psr7\build_query($queryParams);
+        return new Request(
+            'GET',
+            $this->config->getHost() . $resourcePath . ($query ? "?{$query}" : ''),
+            $headers,
+            $httpBody
+        );
+    }
+
+    /**
      * Operation getOrderById
      *
      * Get a specific order
